[tool.poetry]
name = "ratelimit-anyio"
version = "0.2.0"
description = "Rate limit decorator"
authors = ["Rafal Krupinski <10319569-mattesilver@users.noreply.gitlab.com>"]
readme = "README.md"
packages = [{ include = "ratelimit_anyio", from = "src" }]
license = "Apache-2.0"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Topic :: Communications',
]
repository = 'https://github.com/rafalkrupinski/ratelimit-anyio.git'

[tool.poetry.dependencies]
python = "^3.8"
anyio = ">3,<5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = [
    "tests",
    "src"
]